fix dropdown form arrow position on mobile

--- a/assets/scss/components/citadel/actionBar/_actionBar.scss
+++ b/assets/scss/components/citadel/actionBar/_actionBar.scss
@@ -14,6 +14,12 @@
         border: $actionBar-form-field-border;
         border-radius: $actionBar-form-field-radius;
         overflow: hidden;
+        display: flex;
+
+        .form-select--small {
+            flex: 1;
+            padding-left: 0.5em;
+        }
 
         // scss-lint:disable NestingDepth
         &:hover {
